Cambiamos el index y css

--- a/index.html
+++ b/index.html
@@ -4,26 +4,35 @@
     <title>CordovaStilo</title>
     <link href="link rel="preconnect href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <div class="link-bio">
-        <img src="img/Logo mobiletech.png" alt="mobiletech">
-    <h1>Mobile Tech</h1>
-    <div class="link-button">
+    <div class="img">
+        <img class="logo" src="img/Logo mobiletech.png" alt="mobiletech">
+        </div>
+        <div class="texto">
+    <h1 class="cabecera">Mobile Tech</h1>
+    <h5 class="cabecera2">#solucionesmoviles</h5>
+    </div>
+    <div class="botones">
     <ul>
     <a href="http://www.facebook.com/mobiletechpp" target="_blank"><button class="link">Facebook</button></a>
-    <a href="http://"><button class="link">Instagram</button></a>
-    <a href="http://www.google.com/maps/place/Mobile+Tech/@19.794904,-70.6878486,17z" target="_blank"><button class="link">Ubicacion</button></a>
-    <a href="http://"><button class="link">Whatsapp</button></a>
+    <a href="https://www.instagram.com/mobiletech.rd/" target="_blank"><button class="link">Instagram</button></a>
+    <a href="https://maps.app.goo.gl/tihPPkvvw4R9JXWW9" target="_blank"><button class="link">Ubicacion</button></a>
+    <a href="https://wa.me/message/YX23QH6Y2QXFB1" target="_blank"><button class="link">Whatsapp</button></a>
     <a href="http://www.youtube.com/@mobiletechrd" target="_blank"><button class="link">Youtube</button></a>
     <a href="http://github.com/mobiletechrd" target="_blank"><button class="link">Github</button></a>
     </ul>
     </div>
-    <p>©2023 Córdova Stilo</p>
+    <div class="derechos">
+    <p>©2023 Cordova Stilo</p>
+    </div>
     <footer>
+        <div class="email">
         <a href="mailto:jmcordova41@gmail.com">Contactame aquí</a>
     </footer>
+    </div>
 </body>
 </html>
